objects/VR_Related_End_User_Projects__c.object
<CustomObject>
    <description>STS PR3.0 - Junction Object between End User Project and Visit Report</description>
    <fields>
        <fullName>Account_Customer_c__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+End_User_Project__r.Account__r.Id,  End_User_Project__r.Account__r.Name)</formula>
        <label>Account Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>End_User_Project__r.Account_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Project_Name__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+End_User_Project__r.Id, End_User_Project__r.Name)</formula>
        <label>End User Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Related End User Projects</relationshipLabel>
        <relationshipName>Related_End_User_Projects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>End_User_Project__r.Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Country__c</fullName>
        <formula>Text(End_User_Project__r.End_User_Project_Site_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Site Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>Text(End_User_Project__r.End_User_Project_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipLabel>Related End User Projects</relationshipLabel>
        <relationshipName>Related_End_User_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Related_End_User_Projects__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Related End User Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related End User Project</label>
    <nameField>
        <displayFormat>EUP-{0000}</displayFormat>
        <label>Related End User Projects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related End User Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>